--- a/Assignment5/style.css
+++ b/Assignment5/style.css
@@ -49,7 +49,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   letter-spacing: 1px;
-  color: rgb(172, 142, 90);
+  color: #290e03;
 }
 
 .nav-btn {
