--- a/Assignment5/style.css
+++ b/Assignment5/style.css
@@ -55,7 +55,7 @@ a {
 .nav-btn {
   padding: 10px 18px;
   font-size: 0.8rem;
-  background-color: rgb(172, 142, 90);
+  background-color: #290e03;
   color: #fff;
   border: none;
   border-radius: 30px;
@@ -120,7 +120,7 @@ a {
 .search-box .search-btn {
   width: 200px;
   padding: 10px 18px;
-  background-color: rgb(172, 142, 90);
+  background-color: #290e03;
   color: #fff;
   border: none;
   outline: none;
@@ -300,7 +300,7 @@ footer {
   font-size: 2.5rem;
   letter-spacing: 1.5px;
   margin-top: 20px;
-  color: rgb(172, 142, 90);
+  color: #290e03;
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
